# cassie_inverse

inverse-kinematics/: CMakeLists.txt
inverse-kinematics/include/: CCartesian.h  CRoboticConstraints.h  Netown_inverse.h
inverse-kinematics/src/: CCartesian.cpp  Netown_inverse.cpp
